gray/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-op
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($http_gray = "true") {
        proxy_pass http://echo.gray:80;
        break;
      }
#      if ($http_gray != "true") {
#        proxy_pass http://echo.default:80;
#        break;
#      }
spec:
  rules:
  - host: test.com
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
        path: /

---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: default
spec:
  type: ExternalName
  externalName: echo.gray.svc.cluster.local
